# src/routes/routes.ts
@@ -208,6 +208,10 @@ const models: TsoaRoute.Models = {
             "orderId": {"dataType":"string","required":true},
             "orderStatus": {"dataType":"string","required":true},
             "deliveryStatus": {"dataType":"string","required":true},
+            "endOTP": {"dataType":"string","required":true},
+            "trackingURL": {"dataType":"string","required":true},
+            "riderName": {"dataType":"string","required":true},
+            "riderPhone": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
